# z21aio

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: publish.yml  python-package.yml
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  examples.rst  index.rst  quickstart.rst
examples/: basic.py  functions.py  loco_state.py  monitor.py  multi_station.py  speed.py  station_loco_state.py  track_power.py  turnout.py
src/z21aio/: __init__.py  headers.py  loco.py  messages.py  packet.py  station.py  turnout.py  types.py
tests/: __init__.py  test_loco.py  test_messages.py  test_packet.py  test_station.py  test_turnout.py  test_types.py
