[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "z21aio"
version = "0.1.0"
description = "Async Python library for Z21 DCC command station communication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "botmonster" }]
keywords = ["z21", "dcc", "model-railway", "asyncio", "roco", "fleischmann"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Framework :: AsyncIO",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/botmonster/z21aio"
Repository = "https://github.com/botmonster/z21aio"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
